--- a/lib/qr_push/www/actions/home_page.html.eex
+++ b/lib/qr_push/www/actions/home_page.html.eex
@@ -85,6 +85,11 @@
     <!-- TODO plausible -->
   </head>
   <body class="page">
+    <!-- <script type="text/javascript" src="/qrcode.min.js"> </script> -->
+    <img id="qrcode"></img>
+      <!-- <script type="text/javascript">
+      new QRCode(document.getElementById("qrcode"), {text: "qrpu.sh/AAAAAEQ32FYCT7FZ", correctLevel : QRCode.CorrectLevel.L});
+      </script> -->
     <header>
       <h1>QRpu.sh</h1>
       <p>
@@ -120,15 +125,12 @@
             QrPush.send(address, {greeting: "Hello"})
           } else {
             console.log("Starting")
-            const mailbox = await QrPush.open({redirect: window.location.toString()})
-            console.log("Receiving", mailbox)
-            const message = await mailbox.receive()
+            const channel = await QrPush.openChannel({redirect: window.location.toString()})
+            channel.displayOverlay()
+            console.log("Receiving", channel)
+            const message = await channel.receive()
             console.log(message)
           }
-          // const response = await fetch(mailbox.url, {
-          //   method: "GET"
-          // })
-          // console.log(response)
         }());
       </script>
       <pre><code class="javascript">
